--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,26 @@
-# Server Configuration
-server.port=8080
-server.servlet.context-path=/
-
-# Database Configuration
-spring.datasource.url=jdbc:h2:file:./data/transaction;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;MODE=PostgreSQL
+# Primary Database (Read-only H2)
+spring.datasource.url=jdbc:h2:file:./data/transaction;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
-# H2 Console (for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+# Secondary Database (PostgreSQL for dynamic rules)
+spring.datasource.secondary.url=jdbc:postgresql://localhost:5432/recommendation_db
+spring.datasource.secondary.username=postgres
+spring.datasource.secondary.password=password
+spring.datasource.secondary.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate (for future use)
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# JPA for secondary database
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-# Logging
-logging.level.com.starbank_service.recommendation=DEBUG
-logging.level.org.springframework.jdbc.core=TRACE
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+# Liquibase
+spring.liquibase.change-log=classpath:db/migration/changelog.xml
 
-# Spring
-spring.main.banner-mode=console
-spring.application.name=recommendation-service
+# Cache
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
+
+# Server
+server.port=8080
